--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,10 @@
     font-family: 'Poppins', sans-serif;
     text-transform: capitalize;
 }
-
-.heading-text{
+/****************
+   head banner start
+ ****************/
+.heading-banner{
     background-image: url(../images/Neymar-PSG-PNG-Clipart.png);
     
     background-repeat: no-repeat;
@@ -16,7 +18,7 @@
    
     
 }
- .heading-text{
+ .heading-banner{
    height: 500px;
    width: 80%;
    background-color:#161616;
@@ -26,7 +28,7 @@
    
     
 } 
-.heading-text h1{
+.heading-banner h1{
     color: aliceblue;
     padding-top: 100px;
     padding-left: 50px;
@@ -35,14 +37,14 @@
 
 
 }
-.heading-text p{
+.heading-banner p{
     color: white;
     padding-top: 20px;
     padding-left: 50px;
     padding-right: 500px;
 }
 .btn{
-    margin-top: 20px;
+    margin-top: 50px;
    margin-left: 50px;
    height: 40px;
    width: 150px;
@@ -55,12 +57,35 @@
 .btn i{
     margin-left: 15px;
 }
+.btn:hover{
+    height: 60px;
+    width: 200px;
+    background-color:midnightblue ;
+    border-radius: 10px;
+    font-weight: 700;
+}
+/****************
+   head banner end
+ ****************/
+
+
+
+ /****************
+   main start
+ ****************/
+
+.main-div{
+    display: flex;
+    width: 80%;
+    margin-top: 90px;
+    
+}
 .side-boxes{
-    height: 250px;
-    width: 300px;
-    background-color:#161616;
+    height: 270px;
+    width: 280px;
+    background-color: #161616;
     margin-left: 120px;
-    margin-top: 100px;
+    padding-right: 30px;
     border-radius: 10px;
     
     
@@ -70,7 +95,7 @@ input{
     border: none;
     height: 50px;
     width: 220px;
-    margin-left: 40px;
+    margin-left: 30px;
     border-radius: 10px;
     text-align: center;
     font-size: 22px;
@@ -87,10 +112,22 @@ input::placeholder{
 .last-box::placeholder{
     color: blanchedalmond;
 }
+/****************
+   container start
+ ****************/
+
+.box-container{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        grid-gap:20px;
+     } 
+
 .box{
     height: 350px;
-    width: 300px;
-    background-color: gray;
+    width: 250px;
+    border-radius: 10px;
+    border:1px solid rgba(43, 41, 41, 0.2);
+    box-shadow: 0 2px 5px rgba(0,0,0,.1);
 }
 .box button{
     margin-left: 35px;
@@ -98,10 +135,10 @@ input::placeholder{
     height: 30px;
 }
 .box img{
-    height: 150px;
-    width: 220px;
-    margin-left: 35px;
-    margin-top: 30px;
+    height: 180px;
+    width: 250px;
+    border-radius: 10px;
+    
 }
 .box h3{
     margin-left: 35px;
@@ -111,17 +148,23 @@ input::placeholder{
     margin-top: 10px;
     margin-left: 35px;
 }
-.box-container{
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    grid-gap:20px;
-    width: 50%;
-    
+/****************
+   end main
+ ****************/
+.btn-l{
+    height: 50px;
+    width: 100px;
+    margin-top: 20px;
+    display: none;
 }
+
+    
+
 footer{
     height: 300px;
     width: 100%;
     background-color: #161616;
+   
 }
 footer h2{
     color: white;
@@ -141,9 +184,274 @@ footer hr{
     color: aliceblue;
     text-decoration: none;
     font-size: 14px;
-}      
+}  
+        /* media query start */
+        /* start responsive mobile device */
+@media screen and (max-width: 600px){
+
+    .heading-banner{
+        background-image: url(../images/Neymar-PSG-PNG-Clipart.png);
+        
+        background-repeat: no-repeat;
+        background-size:  300px 300px;
+        background-position-x: right ;
+       
+        
+    }
+
+
+    .heading-banner{
+        height: 350px;
+       
+        width: 400px;
+        background-color:chocolate;
+        margin-left: 120px;
+        margin-top: 50px;
+        border-radius: 30px;
+    } 
+    .heading-banner h1{
+        color: aliceblue;
+        padding-top: 60px;
+        padding-left: 10px;
+        padding-right: 200px;
+        font-size: 24px;
+
+    }
+    .heading-banner p{
+        color: white;
+        padding-top: 10px;
+        padding-left: 10px;
+        padding-right: 200px;
+        font-size: 10px;
+    }
+    .btn{
+        margin-top: 30px;
+       margin-left: 10px;
+       height: 40px;
+       width: 150px;
+       border: none;
+       background-color: #e62020;
+       color: white;
+       font-size: 18px;
+       border-radius: 20px;
+       
+    }
+    .main-div{
+        display:grid;
+        width: 80%;
+        margin-top: 10px;
+        
+    }
+    .side-boxes{
+        margin-bottom: 20px;
+        height: 0px;
+        display: inline-flex;
+        margin-left: 120px;
+        padding-right: 35px;
+        
+        border-radius: 10px;
+
+        
+}  
+input{
+    margin-top: 10px;
+    border:1px solid rgba(43, 41, 41, 0.2);
+    height: 40px;
+    width: 130px;
+    margin-left: 5px;
+    border-radius: 10px;
+    
+    font-size: 10px;
+    
+    background-color: aliceblue;
+    } 
+    .box-container{
+        margin-top: 50px;
+    }
+    .box-container{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        grid-gap:20px;
+        margin-top: 50px;
+       
+      
+        
+    }
+    .box{
+        height: 350px;
+        width: 350px;
+        border-radius: 10px;
+        border:1px solid rgba(43, 41, 41, 0.2);
+        box-shadow: 0 2px 5px rgba(0,0,0,.1);
+        margin-left: 140px;
+       
+    }
+    .box button{
+        margin-left: 0px;
+        width:100px;
+        height: 30px;
+    }
+    .box img{
+        height: 200px;
+        width: 350px;
+        border-radius: 10px;
+        
+    }
+    .box h3{
+        margin-left: 0px;
+        margin-top: 10px;
+    }
+    .box i{
+        margin-top: 10px;
+        margin-left: 0px;
+        font-size: 12px;
+    }
+    footer{
+        height: 200px;
+        width: 100%;
+        background-color: #161616;
+    }
+    footer h2{
+        color: white;
+        text-align: center;
+        padding-top: 30px;
+       
+    } 
+    footer hr{
+        margin-top: 20px;
+    } 
+    .footer-tags {
+        text-align: center;
+        margin-top: 20px;
+    }
+    .footer-tags a{
+        margin-left: 30px;
+        color: aliceblue;
+        text-decoration: none;
+        font-size: 8px;
+    } 
+}
+    /* mobile responsive end */
+
+ 
+
+    /* tablet responsive start */
+@media screen and (min-width: 601px) and (max-width: 820px){
+
+    .heading-banner{
+        background-image: url(../images/Neymar-PSG-PNG-Clipart.png);
+        background-repeat: no-repeat;
+        background-size:  400px 400px;
+        background-position-x: right ;
+       
+        
+    }
+    .heading-banner{
+        height: 500px;
+       
+        width: 820px;
+        background-color:firebrick;
+        margin-left: 0px;
+        margin-top: 50px;
+        border-radius: 30px;
+    }
+    .btn{
+        margin-top: 30px;
+       margin-left: 50px;
+       height: 40px;
+       width: 150px;
+       border: none;
+       background-color: #9c7e7e;
+       color: white;
+       font-size: 18px;
+       border-radius: 10px;
+       
+    }
+    .side-boxes{
+
+        height: 0;
+        width: 0;
+        display: inline-flex;
+        background-color: #161616;
+        margin-left: 0px;
+        padding-right: 35px;
+        
+        border-radius: 10px;
+         
+    }
+    input{
+        margin-top: 10px;
+        border:1px solid rgba(43, 41, 41, 0.2);
+        height:60px;
+       width: 350px;
+        margin-left: 20px;
+        border-radius: 10px;
+        text-align: center;
+        font-size: 20px;
+        background-color: aliceblue;
+    }
+    .box-container{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        grid-gap:20px;
+        margin-top: 50px;
+       
+      
+        
+    }
+    .box{
+        border: 0.1px solid grey;
+        height: 350px;
+        width: 350px;
+        margin-top: 50px;
+        margin-left: 0px;
+        border-radius: 10px;
+        border:1px solid rgba(43, 41, 41, 0.2);
+        box-shadow: 0 2px 5px rgba(0,0,0,.1);
+        
+    
+    } 
+    .box img{
+        height: 200px;
+        width: 350px;
+        
+        
+        
+        
+    }
+    .box button{
+        margin-left: 5px;
+        width:100px;
+        height: 30px;
+    }
+    .box h3,p{
+        margin-left: 2px;
+    }
+    
+    .last-divs{
+        display: none;
+    }
+    .btn-l{
+        display: block;
+        background-color: #e62020;
+        border: none;
+        color: white;
+        border-radius: 10px;
+        margin-left: 45%;
+    }
+    
+    footer{
+        margin-top: 20px;
+        height: 300px;
+        width: 100%;
+        background-color: #161616;
+    }
+    /* media query end  */
+    
+
+
+
+
+}
+
    
-   
-
-
-
